hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_or_varray_where_vect_like_array_is_required.php
<?hh // strict

function consumeArrayOfInt(array<int> $arg): void {}

function provideDarrayOrVarrayOfInt(): darray_or_varray<int> {
  return darray["a" => 0];
}

function test(): void {
  consumeArrayOfInt(provideDarrayOrVarrayOfInt());
}
